price-service/deployment.yml
#---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    app: price
    group: products-store-project
  name: price-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: price
  template:
    metadata:
      labels:
        app: price
        group: products-store-project
    spec:
      serviceAccountName: k8s-products-sa
      containers:
      - image: ghcr.io/uliseslarraga/open-telemetry-demo/price-service:main
        name: price
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          initialDelaySeconds: 30
        livenessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          initialDelaySeconds: 30
          periodSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: price
    group: products-store-project
  name: price-svc
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: price
