price-service/kind-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: price-ingress
  labels:
    app: price
spec:
  defaultBackend:
    service:
      name: price-svc
      port:
        number: 8081
